force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_ResiliationPossibleAu__c.field-meta.xml
<CustomField>
    <fullName>LPCR_ResiliationPossibleAu__c</fullName>
    <label>Résiliation possible au</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>31 Août</fullName>
            </value>
            <value>
                <fullName>31 Décembre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>