force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_RessourcesMensuelles__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RessourcesMensuelles__c</fullName>
    <label>Ressources Mensuelles</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>