force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_RessourcesPrixPlancher__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RessourcesPrixPlancher__c</fullName>
    <label>Ressources Prix Plancher</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>