force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_RevenusFamille__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RevenusFamille__c</fullName>
    <label>Revenus Famille</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>