force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_RTContratEntreprise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_RTContratEntreprise__c</fullName>
    <formula>&apos;To Be Edited&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Enregistrement Contrat Entreprise</label>
    <type>Text</type>
</CustomField>