force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Second_Option_Mac_End_Date__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Second_Option_Mac_End_Date__c</fullName>
    <description>LPCR_Second_Option_Mac_End_Date</description>
    <formula>If(SBQQ__EndDate__c &lt; LPCR_SecondOptionStartDate__c, null, SBQQ__EndDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>LPCR_Second_Option_Mac_End_Date</inlineHelpText>
    <label>Second Option Mac End Date</label>
    <type>Date</type>
</CustomField>