force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Second_Option_Mac_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Second_Option_Mac_Start_Date__c</fullName>
    <description>LPCR_Second_Option_Mac_Start_Date</description>
    <formula>If(SBQQ__EndDate__c &lt; LPCR_SecondOptionStartDate__c, null, If(SBQQ__StartDate__c &lt;=  LPCR_SecondOptionStartDate__c, LPCR_SecondOptionStartDate__c, SBQQ__StartDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>LPCR_Second_Option_Mac_Start_Date</inlineHelpText>
    <label>Second Option Mac Start Date</label>
    <type>Date</type>
</CustomField>