force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_SecondOptionStartDate__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SecondOptionStartDate__c</fullName>
    <formula>DATE( YEAR( SBQQ__StartDate__c ) , 09, 01)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Second Option Start Date</label>
    <type>Date</type>
</CustomField>