force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Section__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Section</valueSetName>
    </valueSet>
</CustomField>