force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_SocieteFacturante__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SocieteFacturante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Société Facturante</label>
    <referenceTo>blng__LegalEntity__c</referenceTo>
    <relationshipLabel>Devis (Société Facturante)</relationshipLabel>
    <relationshipName>Devis</relationshipName>
    <type>Lookup</type>
</CustomField>