force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_SommePrixAnnuel__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SommePrixAnnuel__c</fullName>
    <label>LPCR_SommePrixAnnuel</label>
    <summarizedField>SBQQ__QuoteLine__c.LPCR_PrixUnitaire__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.TECH_ProductCode__c</field>
        <operation>notEqual</operation>
        <value>Fraisdedossier</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>