force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_StatutApprobation__c.field-meta.xml
<CustomField>
    <fullName>LPCR_StatutApprobation__c</fullName>
    <label>Statut D&apos;approbation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brouillon</fullName>
                <default>true</default>
                <label>Brouillon</label>
            </value>
            <value>
                <fullName>En Attente</fullName>
            </value>
            <value>
                <fullName>Approuvé</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>