force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_SystemeFacturationStandard__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SystemeFacturationStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Système de facturation standard</label>
    <type>Checkbox</type>
</CustomField>