force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_TauxHoraire__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TauxHoraire__c</fullName>
    <label>Taux Horaire</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>