force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_TauxMensuel__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TauxMensuel__c</fullName>
    <label>Taux Mensuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>