force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_TotalBonCommandeAEnvoyer__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TotalBonCommandeAEnvoyer__c</fullName>
    <description>total bon de commande affiché sur le bon de commande à envoyer pour les contrats de référencement</description>
    <inlineHelpText>total bon de commande affiché sur le bon de commande à envoyer pour les contrats de référencement</inlineHelpText>
    <label>Total Bon de commande à envoyer</label>
    <summarizedField>SBQQ__QuoteLine__c.LPCR_PrixTotalAnnuel__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.LPCR_LigneBonCommandeEnvoye__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>