force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_TypeAccueil__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeAccueil__c</fullName>
    <label>Type Accueil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Régulier</fullName>
                <default>true</default>
                <label>Régulier</label>
            </value>
            <value>
                <fullName>Occasionnel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>