force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_TypeBerceau__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeBerceau__c</fullName>
    <formula>IF(
  ISBLANK(LPCR_MasterDevis__c),
  &quot;Extérieur&quot;,
  IF(
    LPCR_DateDebut__c &gt; Today(),
    &quot;Commercialisé / libre&quot;,
    IF(
      AND(
        LPCR_DateDebut__c &lt; Today(),
        LPCR_DateFin__c &gt; Today()
      ),
      &quot;Commercialisé /occupé&quot;,
      null
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Berceau</label>
    <type>Text</type>
</CustomField>