force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_TypeCreche__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeCreche__c</fullName>
    <description>Valeurs de Type de Creche recoupere depuis Account Creche</description>
    <label>Type de crèche</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LPCR_TypeCreche</valueSetName>
    </valueSet>
</CustomField>