force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_TypeCreche_old__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeCreche_old__c</fullName>
    <formula>Text(LPCR_Creche__r.LPCR_TypeCreche__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type crèche old</label>
    <type>Text</type>
</CustomField>