force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_TypeDenregistrement__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeDenregistrement__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type d&apos;enregistrement</label>
    <type>Text</type>
</CustomField>