force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_TypeDenregistrementText__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeDenregistrementText__c</fullName>
    <label>Type d&apos;enregistrement Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>