force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_TypeDePlanning__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeDePlanning__c</fullName>
    <formula>text(LPCR_PlanningEnfant__r.LPCR_TypePlanning__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de planning</label>
    <type>Text</type>
</CustomField>