force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_TypeDeVente__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeDeVente__c</fullName>
    <label>Type de vente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NewBiz</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Renouvellement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>