force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_TypeEntreprise__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeEntreprise__c</fullName>
    <formula>TEXT(SBQQ__Account__r.LPCR_TypeEntreprise__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type d&apos;entreprise</label>
    <type>Text</type>
</CustomField>