force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_TypeMensualisationT__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeMensualisationT__c</fullName>
    <formula>TEXT( LPCR_TypeMensualisation__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de mensualisation</label>
    <type>Text</type>
</CustomField>