force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_TypeOpportunite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeOpportunite__c</fullName>
    <label>Type d&apos;opportunité</label>
    <length>255</length>
    <type>Text</type>
</CustomField>