force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_TypePlanning__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypePlanning__c</fullName>
    <label>Type de planning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Classique</fullName>
            </value>
            <value>
                <fullName>Tournant</fullName>
            </value>
            <value>
                <fullName>Multi-planning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>