force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_TypeQuote__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeQuote__c</fullName>
    <formula>if( ISPICKVAL(LPCR_TypeCreche__c, &apos;MICRO&apos;),&apos;MICRO&apos;,if(ISPICKVAL(LPCR_TypeCreche__c, &apos;MAC&apos;),&apos;MAC&apos;,if ( OR (RecordType.DeveloperName = &apos;Reservataire&apos;, RecordType.DeveloperName = &apos;Reservataire_Approuve&apos;) , &apos;RES&apos;, if ( or(RecordType.DeveloperName = &apos;Referencement&apos;, RecordType.DeveloperName = &apos;Referencement_Approuve&apos;), &apos;REF&apos;, NULL ) )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Quote</label>
    <type>Text</type>
</CustomField>