force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_TypeReconduction__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeReconduction__c</fullName>
    <label>Type de reconduction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contrat non renouvelable</fullName>
            </value>
            <value>
                <fullName>Reconduction expresse</fullName>
            </value>
            <value>
                <fullName>Reconduction tacite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>