force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_Uplift__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Uplift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uplift</label>
    <type>Checkbox</type>
</CustomField>