force-app/main/default/objects/SBQQ__Quote__c/fields/LPCR_UpliftNow__c.field-meta.xml
<CustomField>
    <fullName>LPCR_UpliftNow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uplift Now</label>
    <type>Checkbox</type>
</CustomField>