force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__BillingPostalCode__c</fullName>
    <description>Postal Code of the Bill To address for this quote.</description>
    <inlineHelpText>Code postal de l&apos;adresse de facturation de ce devis.</inlineHelpText>
    <label>Bill To Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>