force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__BillingStreet__c</fullName>
    <description>Street portion of the billing address for this quote.</description>
    <inlineHelpText>Partie Rue de l&apos;adresse de facturation de ce devis.</inlineHelpText>
    <label>Bill To Street</label>
    <type>TextArea</type>
</CustomField>