force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__EmailTemplateId__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__EmailTemplateId__c</fullName>
    <description>ID of email template that will be pre-populated when documents generated from this quote are emailed.</description>
    <inlineHelpText>Si vous avez un modèle d&apos;e-mail spécifique à utiliser pour les documents générés et envoyés par e-mail depuis ce devis, saisissez l&apos;ID de ce modèle ici.</inlineHelpText>
    <label>Email Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>