force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ExpirationDate__c</fullName>
    <defaultValue>IF(NOT(ISBLANK($Setup.SBQQ__GeneralSettings__c.SBQQ__DefaultQuoteValidity__c)),TODAY() + $Setup.SBQQ__GeneralSettings__c.SBQQ__DefaultQuoteValidity__c, null)</defaultValue>
    <description>Date after which the Quote is no longer valid</description>
    <inlineHelpText>Date à laquelle le devis n&apos;est plus valide</inlineHelpText>
    <label>Expires On</label>
    <type>Date</type>
</CustomField>