force-app/main/default/objects/SBQQ__Quote__c/fields/SBQQ__FirstSegmentTermEndDate__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__FirstSegmentTermEndDate__c</fullName>
    <description>Used with multi-segment Products to prorate first segment.</description>
    <inlineHelpText>Pour les produits à segments multiples, saisissez la date de fin pour calculer au prorata du premier segment.</inlineHelpText>
    <label>First Segment Term End Date</label>
    <type>Date</type>
</CustomField>